# route-inspector

./: .gitignore  LICENSE  README.md  pyproject.toml
alchems/: cli.py  io.py
alchems/alchemical_rules/: alchemical.py  classify_alchemical.py  unwrap_alchemical.py
alchems/composite_rules/: __init__.py  extract.py  unwrap.py
alchems/scoring/: __init__.py  overlap.py
alchems/utils/: cgr_process.py
configs/: rule_extraction_functional_groups.yaml  rule_extraction_small.yaml
docs/: alchemical_rules.rst  composite_rules.rst  index.rst  protection_analysis.rst  scoring.rst  tutorials.rst
reference/: n1_alchemical_rule_classification_summary.json
route_analysis/: cli.py  io.py
route_analysis/alchemical_rules/: __init__.py  alchemical.py  classify_alchemical.py  unwrap_alchemical.py
route_analysis/composite_rules/: extract.py  unwrap.py
route_analysis/protection/: __init__.py  analysis.py  chython_protective.py  chython_rules.py  outputs.py
route_analysis/scoring/: overlap.py
route_analysis/utils/: cgr_process.py  paroutes_sb_cgr_analysis.py
route_inspector/: __init__.py  cli.py  io.py  preprocess_routes.py
route_inspector/alchemical_rules/: alchemical.py  classify_alchemical.py  unwrap_alchemical.py
route_inspector/composite_rules/: extract.py  unwrap.py
route_inspector/protection/: __init__.py  analysis.py  chython_protective.py  chython_rules.py  outputs.py
route_inspector/scoring/: overlap.py
route_inspector/utils/: __init__.py  cgr_process.py  paroutes_sb_cgr_analysis.py
tests/: test_alchemical.py  test_classify_alchemical.py  test_extract.py  test_output.py  test_preprocess_routes.py  test_protection.py  test_scoring_overlap.py  test_sequences.py  test_unwrap.py
tutorials/: README.md  alchem_overlap_venn.ipynb  analyze_protection.ipynb  check_mol_rule.ipynb  classifiy_alchemy.ipynb  test_alchemical.ipynb  test_composite.ipynb  test_scoring.ipynb
