[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "route-inspector"
version = "0.1.0"
description = "Route-level rule mining, alchemical rule extraction, scoring, and protection-strategy analysis for SynPlanner/chython retrosynthesis routes."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Almaz Gilmullin" }]
keywords = [
  "cheminformatics",
  "retrosynthesis",
  "synthesis-planning",
  "reaction-informatics",
  "synplanner",
  "chython",
  "chemical-reactions",
  "route-analysis",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Chemistry",
]

[project.urls]
Homepage = "https://github.com/Protolaw/route-inspector"
Repository = "https://github.com/Protolaw/route-inspector"
Issues = "https://github.com/Protolaw/route-inspector/issues"
Documentation = "https://github.com/Protolaw/route-inspector/tree/main/docs"

[project.scripts]
route-inspector = "route_analysis.cli:main"
analyze-protection = "route_analysis.cli:analyze_protection"
classify-alchemical-rules = "route_analysis.cli:classify_alchemical_rules"
collect-alchemical-rules = "route_analysis.cli:extract_alchemical_rules"
extract-composite-rules = "route_analysis.cli:extract_composite_rules"
score-composite-overlap = "route_analysis.cli:score_composite_overlap"
unwrap-composite-rule = "route_analysis.cli:unwrap_composite_rule"
unwrap-alchemical-rule = "route_analysis.cli:unwrap_alchemical_rule"

[tool.setuptools.packages.find]
where = ["."]
